# PPR

./: CMakeLists.txt  package.xml
src/Refinement/: SurfaceRefinement.cpp  SurfaceRefinement.h
src/SegmentModel/: ColorHistogramSegmentModel.cpp  ColorHistogramSegmentModel.h  GaussiansSegmentModel.cpp  GaussiansSegmentModel.h  MultiTypeSegmentModel.cpp  MultiTypeSegmentModel.h  SegmentModel.cpp
src/SegmentModelFactory/: AdaptiveSingleGaussiansSegmentModelFactory.cpp  AdaptiveSingleGaussiansSegmentModelFactory.h  ColorHistogramSegmentModelFactory.cpp  ColorHistogramSegmentModelFactory.h  RGBDSegmentModelFactory.cpp  RGBDSegmentModelFactory.h  SegmentModelFactory.cpp  SegmentModelFactory.h
src/SurfaceInference/: SurfaceInference.cpp
src/examples/: pcd_tester.cpp
src/pprgeometry/: Plane.cpp  Plane.h  Surface.cpp  pprgeometry.h
src/util/: util.cpp
